# Snake2D

./: CMakeLists.txt  README.md
Snake2D/: Snake2D.sln
Snake2D/Snake2D/: Snake2D.vcxproj  Snake2D.vcxproj.filters
Snake2D/Snake2D/x64/Debug/: Snake2D.exe.recipe  vc143.idb
Snake2D/Snake2D/x64/Debug/Snake2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Snake2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Snake2D/assets/configs/: gameConfig.json
Snake2D/src/: AssetManager.cpp  AssetManager.h  BaseScreen.h  Button.cpp  Button.h  ConfigManager.h  Entity.cpp  ExitPopup.cpp  ExitPopup.h  Food.cpp  Food.h  Game.cpp  Game.h  GameOverPopup.cpp  GameOverPopup.h  GameplayScreen.cpp  GameplayScreen.h  Grid.cpp  HUD.cpp  HUD.h  InstructionPopup.cpp  InstructionPopup.h  MainMenuScreen.cpp  MainMenuScreen.h  PopupBase.cpp  PopupBase.h  ScreenManager.cpp  ScreenManager.h  SettingsPopup.cpp  SettingsPopup.h  Snake.cpp  Snake.h  Snake2D.cpp  SoundManager.cpp  ToggleButton.cpp  ToggleButton.h  gameConfig.json
Snake2D/src/core/: AssetManager.cpp  Entity.cpp  ScreenManager.cpp  SoundManager.cpp
Snake2D/src/gameobjects/: Food.cpp  Grid.cpp  Snake.cpp
Snake2D/src/include/core/: Entity.h  GameConfigManager.h  ScreenManager.h  SoundManager.h
Snake2D/src/include/gameobjects/: Food.h  Grid.h  Snake.h
Snake2D/src/include/popups/: ExitPopup.h  GameOverPopup.h  InstructionPopup.h  PopupBase.h  SettingsPopup.h
Snake2D/src/include/screens/: GameplayScreen.h  MainMenuScreen.h
Snake2D/src/include/ui/: Button.h  HUD.h
Snake2D/src/popups/: ExitPopup.cpp  GameOverPopup.cpp  InstructionPopup.cpp  PopupBase.cpp  SettingsPopup.cpp
Snake2D/src/screens/: GameplayScreen.cpp  MainMenuScreen.cpp
Snake2D/src/ui/: Button.cpp  HUD.cpp  ToggleButton.cpp
